crates/carta/tests/snapshots/golden_writer__revealjs__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<blockquote>
<p>quoted</p>
<p>more lines here</p>
</blockquote>
</section>
