crates/carta/tests/snapshots/golden_writer__revealjs__common__bullet-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ul>
<li><p>a</p></li>
<li><p>b</p></li>
<li><p>c</p></li>
</ul>
</section>
