crates/carta/tests/snapshots/golden_writer__revealjs__common__bullet-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ul>
<li>a</li>
<li>b</li>
<li>c</li>
</ul>
</section>
