crates/carta/tests/snapshots/golden_writer__revealjs__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>see <span class="citation" data-cites="knuth1984">[@knuth1984]</span>
for details</p>
</section>
