crates/carta/tests/snapshots/golden_writer__revealjs__common__cluster-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>Clusters measure one glyph wide: 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 and
the wide glyphs 一二三 take two columns each, while ́abc opens a word
with a mark.</p>
</section>
