crates/carta/tests/snapshots/golden_writer__revealjs__common__code-block-id.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<pre id="snippet"><code>plain code</code></pre>
</section>
