crates/carta/tests/snapshots/golden_writer__revealjs__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<pre><code>indented code
second line</code></pre>
</section>
