crates/carta/tests/snapshots/golden_writer__revealjs__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<pre class="rust"><code>let s = &quot;hi&quot;;
x &lt; y &amp;&amp; y &gt; z</code></pre>
</section>
