crates/carta/tests/snapshots/golden_writer__revealjs__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<pre class="python numberLines"><code>print(1)
print(2)</code></pre>
</section>
