crates/carta/tests/snapshots/golden_writer__revealjs__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<pre><code>first line
second line
</code></pre>
</section>
